Initial commit: React Native Project

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
   "name": "AABookingProjectAppAdvisor",
-  "displayName": "AABookingProjectAppAdvisor"
+  "displayName": "FYP Project Advisor App"
 }
