--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@react-navigation/bottom-tabs": "^7.4.4",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
+  "@react-native-firebase/app": "^21.7.1",
+  "@react-native-firebase/messaging": "^21.7.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-    "react-native-vector-icons": "^10.3.0"
+  "react-native-vector-icons": "^10.3.0",
+  "sockjs-client": "^1.6.1",
+  "@notifee/react-native": "^9.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -38,6 +43,7 @@
     "@types/react": "^19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
+    "@types/sockjs-client": "^1.5.4",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
